--- a/_assets/css/_headings.scss
+++ b/_assets/css/_headings.scss
@@ -38,7 +38,7 @@ h1 {
 
 h2 {
   // font-weight: 100;
-  font-style: italic;
+  // font-style: italic;
 }
 
 h3 {
@@ -47,7 +47,7 @@ h3 {
 
 h4 {
   // font-weight: 400;
-  font-style: italic;
+  // font-style: italic;
 }
 
 h5 {
@@ -56,6 +56,6 @@ h5 {
 
 h6 {
   // font-weight: 100;
-  font-style: italic;
+  // font-style: italic;
 }
 
